# finance-clue

./: .gitignore  .python-version  LICENSE  Makefile  OpenDart-oas.yaml  OpenDart-public.yml  OpenKis-oas.yaml  OpenKrx-public.v1.yaml  README.md  opendart_client_gen_config.md  openkis_client_gen_config.md  openkrx_client_gen_config.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codacy-coverage.yml  codacy-coverageyml  codeql.yml  pylint.yml
finance_clue/: error.py
finance_clue/dartscrap/: __init__.py  acquisition_shares.py  dart_scrap_dto.py  dividend_parser.py  facility_invest_parser.py  list_disclosure.py  preliminary_parser.py  retirement_treasury_stock_parser.py  revenue_volatility_parser.py  supply_agreement_parser.py  table_parser.py  utils.py
finance_clue/opendart/: __init__.py  _client.py  _configuration.py  _patch.py  _vendor.py
finance_clue/openkis/: __init__.py  _client.py  _configuration.py  _patch.py  _vendor.py
finance_clue/openkrx/: __init__.py  _client.py  _configuration.py  _patch.py  _serialization.py  _vendor.py  _version.py
specifications/openkrx/: OpenKrx-public.v1.yaml
stock_clue/: dart_scrap.py  dart_scrap_dto.py  error.py
stock_clue/dartscrap/: __init__.py  acquisition_shares.py  daily_disclosure.py  dart_scrap.py  dart_scrap_dto.py  dividend_parser.py  facility_invest_parser.py  list_disclosure.py  preliminary_parser.py  retirement_treasury_stock_parser.py  (+4 more)
tests/: test_business_report_info.py  test_dart_scrap.py  test_disclosure.py  test_financial_info.py  test_major_report.py
(+94 files in other folders)
