[tool.poetry]
name = "stock-clue"
version = "0.1.0"
description = ""
authors = ["kgcrom <kgcrom@hotmail.com>"]
readme = "README.md"
packages = [{include = "stock_clue"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-playwright = "^0.4.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
